# caravel-sim-infrastructure

./: .readthedocs.yaml  LICENSE  README.md  default.nix  flake.nix
cocotb/: .flake8  .gitignore  Makefile  README.md  caravel_tests.py  caravel_top.sv  design_info.yalm  design_info.yaml  pyproject.toml  requirements.txt  sdf_includes.v  setup.py  testlist2.yaml  tests.json  verify_cocotb.py
cocotb/DVEfiles/: session.tcl  session_2023-01-16T08_22_26.tcl  session_2023-01-17T06_22_27.tcl
cocotb/RTL/: __user_project_addr_space_project.v  __user_project_gpio_example.v  __user_project_la_example.v  __user_project_wrapper.v  caravel_top.sv  debug_regs.v
cocotb/caravel_cocotb/: .gitignore  __init__.py  __main__.py  __version__.py  caravel_interfaces.py  ips_models.py  requirements.txt  sdf_includes.v  verify_cocotb.py
cocotb/caravel_cocotb.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
cocotb/caravel_cocotb/CI/: base_class.py  checker.py  gen_run_command.py  main.py  setup_env.py
cocotb/caravel_cocotb/VIP/: register_file.py  wishbone.py
cocotb/caravel_cocotb/docker/: DockerFile  Dockerfile  README.rst
cocotb/caravel_cocotb/interfaces/: SPI.py  UART.py  caravel.py  common.py  cpu.py
cocotb/caravel_cocotb/models/: apb_model.py
cocotb/interfaces/: SPI.py  UART.py  caravel.py  common.py  cpu.py  defsParser.py  logic_analyzer.py
cocotb/scripts/: config_script_tamplate.py  merge_coverage.py  rerun_script_tamplate.py  reun_all_sdf.py  run_all_sdf.py
cocotb/sessions/: session.sram.vpd.tcl
cocotb/tests/: testlist.yalm  testlist.yaml
(+385 files in other folders)
