[tool.poetry]
name = "caravel_cocotb"
version = "1.4.0"

description = "Efabless Caravel cocotb Verification Flow(s)"
readme = "README.md"

authors = ["Efabless Corporation and Contributors <mostafa.rady@efabless.com>"]

classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
]

[tool.poetry.dependencies]
python = ">=3.7.2,<4"
anytree = "^2.12.0"
click = "^8"
cocotb = "^1.9.0"
cocotb_coverage = "^1.1.0"
oyaml = "^1.0"
prettytable = "^3.7.0"
PyYAML = "^6"
rich = ">=12,<14"
"ruamel.yaml" = "^0.18.6"
volare = ">=0.18.0,<1"
tabulate = "*"

[tool.poetry.dev-dependencies]
pytest = "^6"
flake8 = "*"
setuptools = "*"

[tool.poetry.scripts]
caravel_cocotb = "caravel_cocotb.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
